tests/ui/binary_mismatch.gopp
package main
func main() {
    z := 42 + "s" //~ ERROR invalid operation: untyped int + string
    println(z)
    b := 1 < "x" //~ ERROR invalid comparison: untyped int < string
    println(b)
    c := true && 1 //~ ERROR right side of && must be bool
    println(c)
}
